# Baryon

./: .gitignore  CMakeLists.txt  Readme.md
Asset/: elmas.glb  top.glb
baryon/: CMakeLists.txt
baryon/include/Baryon/: BaryonTypes.hpp  Simulator.hpp
baryon/include/Baryon/Core/: CoreComponents.hpp  Registry.hpp  Snapshot.hpp
baryon/include/Baryon/body/: Body.hpp
baryon/include/Baryon/collision/: AABB.hpp  CollisionShape.hpp  ContactManifold.hpp  DistanceConstraint.hpp  DynamicAABBTree.hpp  NarrowPhase.hpp  PhysicsConstants.hpp  Ray.hpp  RevoluteConstraint.hpp
baryon/include/Baryon/ecs/: ColliderComponents.hpp  EntityManager.hpp  SparseSet.hpp
baryon/include/Baryon/math/: Matrix3x3.hpp  Pose.hpp  Quaternion.hpp  Vector3.hpp
baryon/include/Baryon/memory/: MemoryManager.hpp
baryon/include/Baryon/systems/: CollisionSystem.hpp  HierarchySystem.hpp  Integrator.hpp  IslandSystem.hpp  SequentialImpulsesKernel.hpp  SpatialPartitioning.hpp
baryon/src/: Simulator.cpp
baryon/src/collision/: DynamicAABBTree.cpp  NarrowPhase.cpp
baryon/src/systems/: CollisionSystem.cpp  HierarchySystem.cpp  Integrator.cpp  IslandSystem.cpp  SequentialImpulsesKernel.cpp  SpatialPartitioning.cpp
pkgs_mochi/com.test.mochi/: CMakeLists.txt
pkgs_mochi/com.test.mochi/src/: Main.cc
pkgs_mochi/ext.cgltf/: CMakeLists.txt
pkgs_mochi/lib.qaos.basis/: CMakeLists.txt
pkgs_mochi/lib.qaos.basis/inc/: Basis.hh
pkgs_mochi/lib.qaos.mochi/: .gitignore  CMakeLists.txt
pkgs_mochi/lib.qaos.mochi/inc/mochi/: core.hh  geometry.hh  types.hh
pkgs_mochi/lib.qaos.mochi/inc/mochi/asset/: mesh.hh
pkgs_mochi/lib.qaos.mochi/inc/mochi/module/: bridge.hh  device.hh  memory.hh  renderer.hh  swapchain.hh  window.hh
pkgs_mochi/lib.qaos.mochi/inc/mochi/reader/: reader.hh
pkgs_mochi/lib.qaos.mochi/inc/mochi/rhi/: buffer.hh  pipeline.hh  shader.hh
pkgs_mochi/lib.qaos.mochi/inc/mochi/world/: camera.hh  light.hh  node.hh  visual.hh
pkgs_mochi/lib.qaos.mochi/res/: debug.frag  debug.vert  pbr.frag  pbr.vert
pkgs_mochi/lib.qaos.mochi/src/: core.cc  types.cc
pkgs_mochi/lib.qaos.mochi/src/asset/: mesh.cc
pkgs_mochi/lib.qaos.mochi/src/module/: bridge.cc  device.cc  memory.cc  renderer.cc  swapchain.cc  window.cc
pkgs_mochi/lib.qaos.mochi/src/reader/: gltf.cc  wavefront.cc
pkgs_mochi/lib.qaos.mochi/src/rhi/: buffer.cc  pipeline.cc  shader.cc
pkgs_mochi/lib.qaos.mochi/src/world/: camera.cc  light.cc  node.cc  visual.cc
sandbox/: CMakeLists.txt
sandbox/inc/: Player.hh
sandbox/src/: DebugDraw.hpp  PhysicsLogger.hpp  main.cc
